@@ -1,3 +1,11 @@
+2010-09-22  Mike Frysinger  <vapier@gentoo.org>
+
+	* bfin-dis.c (constant_formats): Constify the whole structure.
+	(fmtconst): Add const to return value.
+	(reg_names): Mark const.
+	(decode_multfunc): Mark s0/s1 as const.
+	(decode_macfunc): Mark a/sop as const.
+
 2010-09-17  Tejas Belagod  <tejas.belagod@arm.com>
 
 	* arm_dis.c (coprocessor_opcodes): Add MRC entry for APSR_nzcv.
